[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Steam/steam_lobby.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Create" type="Button" parent="."]
margin_left = 3.0
margin_top = 3.0
margin_right = 98.0
margin_bottom = 23.0
text = "Create Lobby"

[node name="LobbyName" type="TextEdit" parent="Create"]
margin_left = 128.0
margin_top = 20.0
margin_right = 317.0
margin_bottom = 47.0

[node name="Label" type="Label" parent="Create"]
margin_left = 169.95
margin_top = 3.02077
margin_right = 253.95
margin_bottom = 17.0208
text = "Lobby Name:"

[node name="Join" type="Button" parent="."]
margin_left = 4.0
margin_top = 30.0
margin_right = 98.0
margin_bottom = 50.0
text = "Join Lobby"

[node name="Start" type="Button" parent="."]
margin_left = 916.941
margin_top = 28.3677
margin_right = 1012.94
margin_bottom = 48.3677
text = "Start Game"

[node name="Leave" type="Button" parent="."]
margin_left = 4.0
margin_top = 369.622
margin_right = 321.0
margin_bottom = 389.622
text = "Leave Lobby"

[node name="Message" type="Button" parent="."]
margin_left = 851.0
margin_top = 559.0
margin_right = 1010.0
margin_bottom = 589.0
text = "Send Message"

[node name="TextEdit" type="TextEdit" parent="Message"]
margin_left = -522.0
margin_top = -1.0
margin_right = -4.0
margin_bottom = 31.0

[node name="SteamName" type="Label" parent="."]
margin_left = 911.0
margin_top = 7.0
margin_right = 1012.0
margin_bottom = 21.0
text = "Steam Name"
align = 2

[node name="Players" type="Panel" parent="."]
margin_left = 2.0
margin_top = 54.0
margin_right = 324.0
margin_bottom = 363.0

[node name="NoOfPlayers" type="Label" parent="Players"]
margin_top = 2.0
margin_right = 321.0
margin_bottom = 17.0
text = "Players (0)"
align = 1

[node name="PlayerList" type="RichTextLabel" parent="Players"]
margin_left = 1.0
margin_top = 18.0
margin_right = 322.0
margin_bottom = 307.0

[node name="Chat" type="Panel" parent="."]
margin_left = 329.0
margin_top = 236.0
margin_right = 1012.0
margin_bottom = 551.0

[node name="Name" type="Label" parent="Chat"]
margin_top = 2.0
margin_right = 680.0
margin_bottom = 17.0
text = "Lobby Name"
align = 1

[node name="MessageList" type="RichTextLabel" parent="Chat"]
margin_left = 1.0
margin_top = 18.0
margin_right = 681.0
margin_bottom = 314.0

[node name="LobbyPopup" type="PopupPanel" parent="."]
visible = true
margin_left = 329.0
margin_top = 6.0
margin_right = 909.0
margin_bottom = 231.0

[node name="Panel" type="Panel" parent="LobbyPopup"]
margin_left = 4.0
margin_top = 4.0
margin_right = 576.0
margin_bottom = 221.0

[node name="Label" type="Label" parent="LobbyPopup/Panel"]
margin_left = 1.0
margin_top = 1.0
margin_right = 570.0
margin_bottom = 15.0
text = "Lobby List"
align = 1

[node name="Close" type="Button" parent="LobbyPopup/Panel"]
margin_left = -3.15454
margin_top = -2.94878
margin_right = 112.846
margin_bottom = 17.0512
text = "Close Lobby List"

[node name="Scroll" type="ScrollContainer" parent="LobbyPopup/Panel"]
margin_top = 19.0
margin_right = 574.0
margin_bottom = 221.0

[node name="VBox" type="VBoxContainer" parent="LobbyPopup/Panel/Scroll"]

[connection signal="pressed" from="Create" to="." method="_on_Create_pressed"]
[connection signal="pressed" from="Join" to="." method="_on_Join_pressed"]
[connection signal="pressed" from="Leave" to="." method="_on_Leave_pressed"]
[connection signal="pressed" from="Message" to="." method="_on_Message_pressed"]
[connection signal="pressed" from="LobbyPopup/Panel/Close" to="." method="_on_Close_pressed"]
